// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should compute historical networth 3`] = `
[
  {
    "_id": "1504224000000",
    "_rev": "1-7fdab5ca207bf1f7305c034e2581cb24",
    "change": 0,
    "changePercentage": 0,
    "time": 1504224000,
    "value": 178.03,
  },
  {
    "_id": "1504310400000",
    "_rev": "1-94dfd1a875865a2b1ba4669964205a26",
    "change": 0,
    "changePercentage": 0,
    "time": 1504310400,
    "value": 167.3,
  },
  {
    "_id": "1504396800000",
    "_rev": "1-92971b820044e4eb140cabb7215b2274",
    "change": 0,
    "changePercentage": 0,
    "time": 1504396800,
    "value": 166.44,
  },
  {
    "_id": "1504483200000",
    "_rev": "1-a30da4efbe73da08761df90ae5a75756",
    "change": 0,
    "changePercentage": 0,
    "time": 1504483200,
    "value": 161.84,
  },
  {
    "_id": "1504569600000",
    "_rev": "1-b4e997489e47a5a427b1f1cccc48df50",
    "change": 0,
    "changePercentage": 0,
    "time": 1504569600,
    "value": 159.48,
  },
  {
    "_id": "1504656000000",
    "_rev": "1-e55ac63bfc7fdb8e669b592622a37a7d",
    "change": 0,
    "changePercentage": 0,
    "time": 1504656000,
    "value": 166.09,
  },
  {
    "_id": "1504742400000",
    "_rev": "1-5400336fbfaae6e84b23c0f468c8c5c3",
    "change": 0,
    "changePercentage": 0,
    "time": 1504742400,
    "value": 337.37,
  },
  {
    "_id": "1504828800000",
    "_rev": "1-cc7aa5d1c90cf3e6aac52baa8e76efb5",
    "change": 0,
    "changePercentage": 0,
    "time": 1504828800,
    "value": 317.37,
  },
  {
    "_id": "1504915200000",
    "_rev": "1-90de6e6aa0c50b413fcc9df692461822",
    "change": 0,
    "changePercentage": 0,
    "time": 1504915200,
    "value": 316.23,
  },
  {
    "_id": "1505001600000",
    "_rev": "1-ed68f79d46e44c3655191c157ba711c5",
    "change": 0,
    "changePercentage": 0,
    "time": 1505001600,
    "value": 310.17,
  },
  {
    "_id": "1505088000000",
    "_rev": "1-d3d68656bcd70516175be14290ba3bd7",
    "change": 0,
    "changePercentage": 0,
    "time": 1505088000,
    "value": 307.21,
  },
  {
    "_id": "1505174400000",
    "_rev": "1-b5aaa2fca1fcd6258ac1c706c36e0325",
    "change": 0,
    "changePercentage": 0,
    "time": 1505174400,
    "value": 303.84,
  },
  {
    "_id": "1505260800000",
    "_rev": "1-86afe7317925103630723848bbbe67ec",
    "change": 0,
    "changePercentage": 0,
    "time": 1505260800,
    "value": 281.28,
  },
  {
    "_id": "1505347200000",
    "_rev": "1-142b2cb016e6eaacda544f79c99406d5",
    "change": 0,
    "changePercentage": 0,
    "time": 1505347200,
    "value": 237.14,
  },
]
`;

exports[`should refresh networth 3`] = `
[
  {
    "_id": "1504224000000",
    "_rev": "1-7fdab5ca207bf1f7305c034e2581cb24",
    "change": 0,
    "changePercentage": 0,
    "time": 1504224000,
    "value": 178.03,
  },
  {
    "_id": "1504310400000",
    "_rev": "1-94dfd1a875865a2b1ba4669964205a26",
    "change": 0,
    "changePercentage": 0,
    "time": 1504310400,
    "value": 167.3,
  },
  {
    "_id": "1504396800000",
    "_rev": "1-92971b820044e4eb140cabb7215b2274",
    "change": 0,
    "changePercentage": 0,
    "time": 1504396800,
    "value": 166.44,
  },
  {
    "_id": "1504483200000",
    "_rev": "1-a30da4efbe73da08761df90ae5a75756",
    "change": 0,
    "changePercentage": 0,
    "time": 1504483200,
    "value": 161.84,
  },
  {
    "_id": "1504569600000",
    "_rev": "1-b4e997489e47a5a427b1f1cccc48df50",
    "change": 0,
    "changePercentage": 0,
    "time": 1504569600,
    "value": 159.48,
  },
  {
    "_id": "1504656000000",
    "_rev": "1-e55ac63bfc7fdb8e669b592622a37a7d",
    "change": 0,
    "changePercentage": 0,
    "time": 1504656000,
    "value": 166.09,
  },
  {
    "_id": "1504742400000",
    "_rev": "1-5400336fbfaae6e84b23c0f468c8c5c3",
    "change": 0,
    "changePercentage": 0,
    "time": 1504742400,
    "value": 337.37,
  },
  {
    "_id": "1504828800000",
    "_rev": "1-cc7aa5d1c90cf3e6aac52baa8e76efb5",
    "change": 0,
    "changePercentage": 0,
    "time": 1504828800,
    "value": 317.37,
  },
  {
    "_id": "1504915200000",
    "_rev": "1-90de6e6aa0c50b413fcc9df692461822",
    "change": 0,
    "changePercentage": 0,
    "time": 1504915200,
    "value": 316.23,
  },
  {
    "_id": "1505001600000",
    "_rev": "1-ed68f79d46e44c3655191c157ba711c5",
    "change": 0,
    "changePercentage": 0,
    "time": 1505001600,
    "value": 310.17,
  },
  {
    "_id": "1505088000000",
    "_rev": "1-d3d68656bcd70516175be14290ba3bd7",
    "change": 0,
    "changePercentage": 0,
    "time": 1505088000,
    "value": 307.21,
  },
  {
    "_id": "1505174400000",
    "_rev": "1-b5aaa2fca1fcd6258ac1c706c36e0325",
    "change": 0,
    "changePercentage": 0,
    "time": 1505174400,
    "value": 303.84,
  },
  {
    "_id": "1505260800000",
    "_rev": "1-86afe7317925103630723848bbbe67ec",
    "change": 0,
    "changePercentage": 0,
    "time": 1505260800,
    "value": 281.28,
  },
  {
    "_id": "1505347200000",
    "_rev": "2-2ae255afa8ddf9dbeebee2cc8f0524fd",
    "change": 0,
    "changePercentage": 0,
    "time": 1505347200,
    "value": 237.14,
  },
]
`;
